handle websocket for real time notification v1